--- a/storybook/Welcome.mdx
+++ b/storybook/Welcome.mdx
@@ -3,4 +3,6 @@ import { ComponentNameDecorator } from "./components";
 
 <Meta title="Welcome" />
 
+{/* TODO image not working */}
+
 <ComponentNameDecorator withFoundationBackground>Welcome to Storybook</ComponentNameDecorator>
