--- a/storybook/stand-alone-documentation/Welcome.stories.mdx
+++ b/storybook/stand-alone-documentation/Welcome.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/blocks";
-import { ComponentNameDecorator } from "./components";
+import { ComponentNameDecorator } from "../components";
 
 <Meta title="Welcome" />
 
