Move import index.scss to colors.stories.mdx

--- a/storybook/stand-alone-documentation/colors/colors.stories.mdx
+++ b/storybook/stand-alone-documentation/colors/colors.stories.mdx
@@ -7,6 +7,7 @@ import { BorderColors } from "./border-colors/border-colors";
 import { ContentColors } from "./content-colors/content-colors";
 import { cardColorsExample, menuColorsExample } from "./assets";
 import { ComponentNameDecorator } from "../../components";
+import "../../../src/index.scss"; //  Importing color tokens, which are displayed in this story
 import classes from "./colors.stories.module.scss";
 
 <Meta title="Foundations/Colors" />
